# Qiraa

./: netlify.toml
admin/: package-lock.json  package.json
admin/src/: App.jsx
client/: .env  index.html  package-lock.json  package.json
client/public/: manifest.json  sw.js
client/src/: App.jsx  main.jsx
server/: .env  Cargo.toml  Dockerfile
server/.sqlx/: query-21142e33d1d2aee421fdff7529f9e5a903fa4f5ca661edf2df842d4d02ced1ac.json  query-22c7ad6be9a76a5b66b97a5d9509d1b6b656790565acced2fcb2de4575fd84ad.json  query-6189ead436e6bc76b668379934e768e3e8ef80a3b419ee7e65a7c16a7d73e39f.json  query-6814f801628fd38ae35b3cf23da38efe662b31bc62a17dfd13eb1b881f35fdd2.json  query-734273c5046739b0b34f924f5ccd59b489deb2c5c6c40d56e7f84bf1b4b24e17.json  query-8bbfe322ee06a3cc319feb6dae89faad150dbf4a1b97ef31bc84875823ccaa70.json  query-afc6b396ba9153c81e42c86c83fcc132e09876fdc21d0351a81daebe7b976731.json  query-b028251217bca1e3f927d788f7c574ada0d96cc2d784c60c2940aa6de0f2ea78.json  query-b2ff9013651c3e8ae0ec3900e243576b572d982b0aac5b40c3b27f5eb27f99c0.json  query-c433270b8ca70a0846418184a18da626daad1c81897cd3f7dbc7b1eabc1ae8fd.json  query-ead0d36ff9ddc368646dbba4716e11603c5adfc13968d32a79aed096b3789901.json
server/migrations/: 20260101175259_init_schema.sql  20260101182032_seed_genres.sql  20260101182947_seed_book.sql  20260101185402_seed_chapters.sql  20260117164105_add_position_column_to_chapters.sql
server/src/: main.rs
server/src/handlers/: book.rs  chapters.rs  genres.rs  reader.rs
server/src/routes/: book.rs  chapters.rs  genres.rs  mod.rs  reader.rs
(+8 files in other folders)
