[features]
sqlx-offline = []

[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "tls-rustls"] }

dotenvy = "0.15"

tower-http = { version = "0.6", features = ["cors"] }

http = "1.4"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
